fix: overflow list bottom gradient on toc (closes #1888)

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -45,23 +45,21 @@ button.toc-header {
   }
 }
 
-.toc-content {
+ul.toc-content {
   list-style: none;
   position: relative;
+  margin: 0.5rem 0;
+  padding: 0;
 
-  & ul {
-    list-style: none;
-    margin: 0.5rem 0;
-    padding: 0;
-    & > li > a {
-      color: var(--dark);
-      opacity: 0.35;
-      transition:
-        0.5s ease opacity,
-        0.3s ease color;
-      &.in-view {
-        opacity: 0.75;
-      }
+  list-style: none;
+  & > li > a {
+    color: var(--dark);
+    opacity: 0.35;
+    transition:
+      0.5s ease opacity,
+      0.3s ease color;
+    &.in-view {
+      opacity: 0.75;
     }
   }
 
